# VCSK

./: .gitignore  .install.sh  CMakeLists.txt  Documentation.md  LICENSE  Makefile  README.md  install.sh  main.c
include/: fun.h
src/: branch_f.c  branch_f_add.c  branch_f_add_dir.c  branch_f_del.c  branch_f_del_dir.c  branch_f_del_ver.c  branch_f_notes.c  branch_f_notes_clear.c  branch_f_replace.c  branch_f_replace_dir.c  comm_data.c  help.c  history_clear.c  info.c  init_data.c  init_f.c  init_f_history.c  init_f_info.c  init_f_info_file.c  init_f_init.c  init_f_main.c  init_f_notes.c  init_f_ver_project.c  main.c  vcsk.c
